[gd_scene load_steps=2 format=3 uid="uid://bo08itw2jnqb"]

[ext_resource type="Script" path="res://budget.gd" id="1_hklj7"]

[node name="Budget" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hklj7")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.478
anchor_top = 1.0
anchor_right = 0.478
anchor_bottom = 1.0
offset_left = 0.343994
offset_top = -648.0
offset_right = 51.344
offset_bottom = -625.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.243137, 0.611765, 0.247059, 1)
theme_override_font_sizes/font_size = 130
text = "Budget"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 100)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 24
text = "BACK"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_top = 286.5
offset_right = 1152.0
offset_bottom = 361.5
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "SAVE"

[node name="SavedText" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
